eval version of calculator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,74 @@
 <body>
   <div id="main-container">
 
-    <div id="row-one" class="row">
+
+    <table>
+      <form name="calculator">
+
+      <input id="screen" value=""/>
+
+      <tr>
+        <td>
+          <button id="sevenbutton" type="button" class="number" value="7">7</button>
+        </td>
+        <td>
+          <button id="eightbutton" type="button" class="number" value="8">8</button>
+        </td>
+        <td>
+          <button id="ninebutton" type="button" class="number" value="9">9</button>
+        </td>
+        <td>
+          <button id="addbutton" type="button" class="calculate" value="+">+</button>
+        </td>
+      </tr>
+
+      <td>
+          <button id="fourbutton" type="button" class="number" value="4">4</button>
+      </td>
+      <td>
+          <button id="fivebutton" type="button" class="number" value="5">5</button>
+      </td>
+      <td>
+          <button id="sixbutton" type="button" class="number" value="6">6</button>
+      </td>
+      <td>
+          <button id="subtractbutton" type="button" class="calculate" value="-">-</button>
+      </td>
+      <tr>
+        <td>
+            <button id="onebutton" type="button" class="number" value="1">1</button>
+        </td>
+        <td>
+            <button id="twobutton" type="button" class="number" value="2">2</button>
+        </td>
+        <td>
+            <button id="threebutton" type="button" class="number" value="3">3</button>
+        </td>
+        <td>
+            <button id="dividebutton" type="button" class="calculate" value="/">/</button>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+            <button id="zerobutton" type="button" class="number" value="0">0</button>
+        </td>
+        <td>
+            <button id="clearbutton" type="button" class="number" value="C">C</button>
+        </td>
+        <td>
+            <button id="equalbutton" type="button" class="number" value="=">=</button>
+        </td>
+        <td>
+            <button id="multiplybutton" type="button" class="number" value="*">*</button>
+        </td>
+      </tr>
+
+    </form>
+
+    </table>
+
+<!--    <div id="row-one" class="row">
       <input type="text">
     </div>
 
@@ -85,8 +152,10 @@
         <p>=</p>
       </div>
     </div>
-
+-->
   </div>
+
+  <script src="script.js"></script>
 
 </body>
 </html>
