--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
 
     <table>
-      <form name="calculator">
+      <form name="calculator" id="calculator">
+      <tr>
+        <input id="screen" type="text" value=""/>
+      </tr>
 
-      <input id="screen" value=""/>
 
       <tr>
         <td>
@@ -69,90 +71,13 @@
             <button id="equalbutton" type="button" class="number" value="=">=</button>
         </td>
         <td>
-            <button id="multiplybutton" type="button" class="number" value="*">*</button>
+            <button id="multiplybutton" type="button" class="calculate" value="*">*</button>
         </td>
       </tr>
 
     </form>
 
     </table>
-
-<!--    <div id="row-one" class="row">
-      <input type="text">
-    </div>
-
-    <div id="row-two" class="row">
-      <div id="AC" class="button white-button">
-        <p>AC</p>
-      </div>
-      <div id="negate" class="button white-button">
-        <p>+/-</p>
-      </div>
-      <div id="percentage" class="button white-button">
-        <p>%</p>
-      </div>
-      <div id="divide" class="button orange-button">
-        <p>/</p>
-      </div>
-    </div>
-
-    <div id="row-three" class="row">
-      <div id="seven" class="button white-button">
-        <p>7</p>
-      </div>
-      <div id="eight" class="button white-button">
-        <p>8</p>
-      </div>
-      <div id="nine" class="button white-button">
-        <p>9</p>
-      </div>
-      <div id="multiply" class="button orange-button">
-        <p>X</p>
-      </div>
-    </div>
-
-    <div id="row-four" class="row">
-      <div id="four" class="button white-button">
-        <p>4</p>
-      </div>
-      <div id="five" class="button white-button">
-        <p>5</p>
-      </div>
-      <div id="six" class="button white-button">
-        <p>6</p>
-      </div>
-      <div id="subtract" class="button orange-button">
-        <p>-</p>
-      </div>
-    </div>
-
-    <div id="row-five" class="row">
-      <div id="one" class="button white-button">
-        <p>1</p>
-      </div>
-      <div id="two" class="button white-button">
-        <p>2</p>
-      </div>
-      <div id="three" class="button white-button">
-        <p>3</p>
-      </div>
-      <div id="add" class="button orange-button">
-        <p>+</p>
-      </div>
-    </div>
-
-    <div id="row-six" class="row">
-      <div id="zero" class="button white-button">
-        <p>0</p>
-      </div>
-      <div id="decimal" class="button white-button">
-        <p>.</p>
-      </div>
-      <div id="equal" class="button orange-button">
-        <p>=</p>
-      </div>
-    </div>
--->
   </div>
 
   <script src="script.js"></script>
